<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fadeScrollbars="true"
		android:orientation="vertical"
		android:scrollbars="vertical"
		tools:context=".MainActivity"
		>
		<EditText
			android:id="@+id/name_edittext_view"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/name"
			android:inputType="textMultiLine"
			/>
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_margin="8dp"
				android:gravity="center_horizontal"
				style="@style/HeaderTextStyle"
				android:text="@string/toppings"
				/>
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="vertical"
				>
				<CheckBox
					android:id="@+id/add_whipped_cream_checkbox"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:checked="false"
					android:text="@string/whipped_cream"
					android:paddingLeft="24dp"
					android:textAppearance="?android:textAppearanceMedium"
					android:textSize="16sp"
					android:onClick="isCheckedWhippedCream"
					/>
				<CheckBox
					android:id="@+id/add_chocolate_checkbox"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:checked="false"
					android:text="@string/chocolate"
					android:paddingLeft="24dp"
					android:textAppearance="?android:textAppearanceMedium"
					android:textSize="16sp"
					android:onClick="isCheckedChocolate"
					/>
			</LinearLayout>
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_margin="8dp"
				android:gravity="center"
				style="@style/HeaderTextStyle"
				android:text="@string/quantity"
				/>
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				android:orientation="horizontal"
				>
				<Button
					android:layout_width="48dp"
					android:layout_height="48dp"
					android:layout_gravity="left"
					android:onClick="decreaseOrderQuantity"
					android:text="-"
					/>
				<TextView
					android:id="@+id/quantity_text_view"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="8dp"
					android:layout_gravity="center"
					android:text="@string/initial_quantity_value"
					/>
				<Button
					android:layout_width="48dp"
					android:layout_height="48dp"
					android:layout_gravity="right"
					android:onClick="increaseOrderQuantity"
					android:text="+"
					/>
			</LinearLayout>
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				style="@style/HeaderTextStyle"
				android:layout_margin="8dp"
				android:text="@string/price" />
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				>
				
				<Button
					android:layout_width="48dp"
					android:layout_height="48dp"
					android:layout_toLeftOf="@id/price_text_view"
					android:onClick="decreasePrice"
					android:text="-"
					android:visibility="invisible"
					/>
				<TextView
					android:id="@+id/price_text_view"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerInParent="true"
					android:layout_margin="8dp"
					android:text="0" />
				<Button
					android:layout_width="48dp"
					android:layout_height="48dp"
					android:layout_toRightOf="@id/price_text_view"
					android:onClick="increasePrice"
					android:text="+"
					android:visibility="invisible"
					/>
			</RelativeLayout>
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			>
			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_margin="8dp"
				android:onClick="calculate"
				android:text="@string/calculate" />
			<Button
				android:id="@+id/clear_order_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_margin="8dp"
				android:onClick="clearOrder"
				android:text="@string/clear" />
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_margin="8dp"
				android:gravity="center"
				style="@style/HeaderTextStyle"
				android:text="@string/total_cost"
				/>
			<TextView
				android:id="@+id/cost_text_view"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_gravity="center"
				android:layout_margin="8dp"
				android:text="0" />
		</LinearLayout>
		
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/order"
			android:onClick="submitOrder"
			/>
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_margin="8dp"
				android:gravity="center"
				style="@style/HeaderTextStyle"
				android:text="@string/order_summary"
				/>
			<TextView
				android:id="@+id/order_summary_text_view"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_gravity="center"
				android:layout_margin="8dp"
				android:text="" />
		</LinearLayout>
		
		
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/send"
			android:onClick="sendOrder"
			/>
	
	</LinearLayout>
</ScrollView>